--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -100,6 +100,7 @@ Thus, the system dynamics are conditioned on the saturation state of the catalys
         \Gamma & \text{if } \sigma > \Gamma \\
         0 & \text{if } \sigma < 0
     \end{cases}
+    \label{eqn::g_sat}
 \end{align}
 We have dynamics of the concentration of reactants from the mass balance for the CSTR:
 \begin{align}
