Added all the Png files

--- a/secs/4-NOx_mdl/0-NOx_mdl.tex
+++ b/secs/4-NOx_mdl/0-NOx_mdl.tex
@@ -2,4 +2,5 @@
 
 \input{secs/4-NOx_mdl/1_NOx_r_mdl.tex}
 \input{secs/4-NOx_mdl/2_catalyst_saturation.tex}
+\input{secs/4-NOx_mdl/25_switching_condition.tex}
 \input{secs/4-NOx_mdl/3_validation.tex}
