--- a/secs/n-back/refs.bib
+++ b/secs/n-back/refs.bib
@@ -592,3 +592,14 @@
   volume    = {47},
   year      = {2008}
 }
+
+@article{hansen1991institutional,
+  author    = {Hansen, Gary S and Hill, Charles WL},
+  journal   = {Strategic management journal},
+  number    = {1},
+  pages     = {1--16},
+  publisher = {Wiley Online Library},
+  title     = {Are institutional investors myopic? A time-series study of four technology-driven industries},
+  volume    = {12},
+  year      = {1991}
+}
