--- a/secs/4-NOx_mdl/2-subs/parm_est.tex
+++ b/secs/4-NOx_mdl/2-subs/parm_est.tex
@@ -13,9 +13,9 @@ of the saturated model are tabulated below.
         \begin{tabular}{l l c c c c}
                 \hline \hline
                 Age & Test & Temp. Zone &
-                $\pmb \theta_{\Gamma scr}[2]$ &
-                $\pmb \theta_{\Gamma scr}[1]$ &
-                $\pmb \theta_{\Gamma scr}[0]$ \\ \hline \hline
+                $ \theta_{\Gamma scr}[2]$ &
+                $ \theta_{\Gamma scr}[1]$ &
+                $ \theta_{\Gamma scr}[0]$ \\ \hline \hline
                 % ============================================
                 Degreened & RMC & high & -0.06 & 1.43 & 31.19 \\
                 % =============================================
@@ -37,7 +37,7 @@ of the saturated model are tabulated below.
                 % =============================================
         \end{tabular}
 
-        $\pmb \theta_{\Gamma scr} [i]$ is the coefficient of $T^i$ in the polynomial.
+        $ \theta_{\Gamma scr} [i]$ is the coefficient of $T^i$ in the polynomial.
 \end{table}
 
 The parameter values are directionally different for aged and degreened catalyst. Their variance would provide better discernability of the catalyst's aging based on these parameter values.
