--- a/secs/4-NOx_mdl/2_catalyst_saturation.tex
+++ b/secs/4-NOx_mdl/2_catalyst_saturation.tex
@@ -45,20 +45,20 @@ From, the derivation and the parametrization in the last section, specifically, 
 \begin{align}
         \lrf{\tau(k) k_{s2v} k_{scr}(k) u_1(k)}\sigma^{ub}(k) &=
         \eta(k) \lrb{\frac{u_1(k)}{F(k)}} \lrb{\frac{F(k-1)}{u_1(k-1)}}
-        +\lrb{\frac{u_1(k)}{F(k)}} \pmb \phi_{NO_x}^T \pmb \theta_{NO_x}
+        +\lrb{\frac{u_1(k)}{F(k)}} \phi_{NO_x}^T \theta_{NO_x}
         \label{eqn::sigma_ub_param}
 \end{align}
 %===
 Similarly, the second case can be parametrized using the same set of approximations ($Ai$'s) and models of physical quantities (\ref{eqn::residence_time_mdl}, \ref{eqn::k_mdl}),
 \begin{align*}
-        \lrf{\tau(k) k_{s2v} k_{scr}(k) u_1(k)} \Gamma  &= \frac{\tau_0}{F(k)} \times k_{s2v} \times \pmb \phi(k)^T \pmb \theta_{scr} \times u_1(k) \times \Gamma\\
+        \lrf{\tau(k) k_{s2v} k_{scr}(k) u_1(k)} \Gamma  &= \frac{\tau_0}{F(k)} \times k_{s2v} \times \phi(k)^T \theta_{scr} \times u_1(k) \times \Gamma\\
         % ==
-        &= \lrf{\lrb{\frac{u_1(k)}{F(k)}} \pmb \phi^T(k) } \lrf{\Gamma \tau_0 k_{s2v} \pmb \theta_{scr}}
+        &= \lrf{\lrb{\frac{u_1(k)}{F(k)}} \phi^T(k) } \lrf{\Gamma \tau_0 k_{s2v} \theta_{scr}}
 \end{align*}
 \begin{align}
-        Let, \qquad  \Gamma \tau_0 k_{s2v} \pmb \theta_{scr} &= \pmb \theta_{\Gamma scr}\\
+        Let, \qquad  \Gamma \tau_0 k_{s2v} \theta_{scr} &= \theta_{\Gamma scr}\\
         \lrf{\tau(k) k_{s2v} k_{scr}(k) u_1(k)} \Gamma  &=
-        \lrb{\frac{u_1(k)}{F(k)}} \pmb \phi^T(k)  \pmb \theta_{\Gamma scr}
+        \lrb{\frac{u_1(k)}{F(k)}} \phi^T(k)  \theta_{\Gamma scr}
         \label{eqn::gamma_scr}
 \end{align}
 %===
@@ -67,9 +67,9 @@ The conditions for case switching can also be parametrized to the same expressio
 Let,
 \begin{align}
         f_{\sigma}(k) &= \eta(k) \lrb{\frac{u_1(k)}{F(k)}} \lrb{\frac{F(k-1)}{u_1(k-1)}}
-        +\lrb{\frac{u_1(k)}{F(k)}} \pmb \phi_{NO_x}^T \pmb \theta_{NO_x}\\
+        +\lrb{\frac{u_1(k)}{F(k)}} \phi_{NO_x}^T \theta_{NO_x}\\
         %===
-        f_{\Gamma}(k) &= \lrb{\frac{u_1(k)}{F(k)}} \pmb \phi^T(k)  \pmb \theta_{\Gamma scr}
+        f_{\Gamma}(k) &= \lrb{\frac{u_1(k)}{F(k)}} \phi^T(k)  \theta_{\Gamma scr}
 \end{align}
 
 Substituting the above parametrization into equation (\ref{eqn::eta_cases}):
