--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -1,11 +1,28 @@
 \chapter{Catalyst Saturation and Aging Detection}
-The catalyst saturation that is inherently considered in the CSTR approach needs to be explicitly included as separate
-mode of the system. The present work developed such a model under catalyst saturation which becomes one of the modes of
-the complete switched nonlinear model. Following the model development we present the parameter estimation algorithm
-that estimates the parameters of the saturated catalyst model using the real-world data whose operating mode is unknown
-and has additional uncertainties due to $NO_x$ sensor's cross-sensitivity to ammonia. Finally, we develope a statistical
-test for detecting the catalyst aging based on the estimated parameters of the saturated catalyst model. The performance
-of the proposed aging detector is demonstrated using both test-cell and real-world truck data.
+For $NO_x$ process dynamics under catalyst saturation, $\sigma(k) = \Gamma$.
+\begin{align}
+    \implies \eta_{sat} (k+1) &=  \frac{u_1(k)}{F(k)} \tau_0 \; k_{scr}(T(k)) \; \Gamma (T(k))
+        \label{eqn::nox_mdl}
+\end{align}
+%===
+The above equation~(\ref{eqn::nox_mdl}) shows that the tailpipe $NO_x$ concentration becomes independent of urea dosing under catalyst saturation. Polynomial approximations of Arrhenius temperature dependence of the rate constant, $k_{scr}$ and the concentration of viable voids, $\Gamma$ (\cite{nova2014urea},\cite{ciardelli2004scr},\cite{joo2008study}), are used to get a linear in parameters model for the $NO_x$ process dynamics.
+\begin{align}
+    k_{scr}(T) &= A_{scr} e^{\lr{-\frac{E_{scr}}{RT}}} \approx \sum k_i T^i  \qquad i = 0, 1, \hdots
+    \label{eqn::rate_const} \\
+    \Gamma(T) &= S_1 e^{-S_2 T} \approx \sum r_i T^i \qquad i = 0, 1, \hdots
+    \label{eqn::gamma}
+\end{align}
+%===
+The above approximate models for temperature introduces dependence of the parameter estimates based on temperature range in the samples. For numerical stability \cite{press2003numerical}, the given temperature range in mapped to $[-1,1]$ and chebyshev polynomial basis \cite{trefethen2019approximation} are used instead of standard polynomials. Incorporating equations (\ref{eqn::res_time}) and (\ref{eqn::gamma}) into the $NO_x$ process dynamic model (\ref{eqn::nox_mdl}),
+\begin{align}
+    \eta_{sat} (k+1) &= \phi_{sat}^T(T(k)) \; \theta_{sat}
+    \label{eqn::regression} \\
+    %===
+    \phi_{sat} (k) &= \frac{u_1(k)}{F(k)} \bm{2\lr{\frac{T-T_0}{T_r}}^2-1 & \frac{T-T_0}{T_r} & 1}
+    \label{eqn::phi_def} \\
+    %===
+    \text{Where, } \quad T_0 &= \frac{T_{max} + T_{min}}{2}, \quad T_r = \frac{T_{max} - T_{min}}{2} \notag
+\end{align}
 
 \input{secs/5-sat_detect/paper/3-MLE_estimation.tex}
 \input{secs/5-sat_detect/paper/4-catalyst_mode_detection.tex}
