done adding the chapter 4

--- a/secs/4-NOx_mdl/1-subs/g2.tex
+++ b/secs/4-NOx_mdl/1-subs/g2.tex
@@ -4,11 +4,11 @@
                 t_s k_{ads}(k-1) \con{NH_3}^{in}(k-1)\\
         % ===
         &=\lrb{\frac{F(k-1)}{F(k)}}\lrb{\frac{u_1(k)}{u_1(k-1)}}
-                t_s \times \phi^T(k-1) \theta_{ads} \times \nu_u \frac{u_2(t-1)}{F(t-1)}
+                t_s \times \phi_1^T(k-1) \theta_{ads} \times \nu_u \frac{u_2(t-1)}{F(t-1)}
                 \qquad
                 \bm{\because \ref{eqn::residence_time_mdl}, \ref{eqn::k_mdl}, \ref{eqn::urea_mdl}}
 \end{align*}
 \begin{align}
-       g_{ads} &=  \lrf{\lrb{\frac{u_1(k)}{F(k)}}\lrb{\frac{u_2(k-1)}{u_1(k-1)}} \phi^T(k-1) }
+       g_{ads} &=  \lrf{\lrb{\frac{u_1(k)}{F(k)}}\lrb{\frac{u_2(k-1)}{u_1(k-1)}} \phi_1^T(k-1) }
                 \times \lrf{\nu_u t_s \theta_{ads}}
 \end{align}
