--- a/secs/4-NOx_mdl/2-subs/parm_est.tex
+++ b/secs/4-NOx_mdl/2-subs/parm_est.tex
@@ -13,9 +13,9 @@ of the saturated model are tabulated below.
         \begin{tabular}{l l c c c c}
                 \hline \hline
                 Age & Test & Temp. Zone &
-                $ \theta_{\Gamma scr}[2]$ &
-                $ \theta_{\Gamma scr}[1]$ &
-                $ \theta_{\Gamma scr}[0]$ \\ \hline \hline
+                $ \theta_{sat}[2]$ &
+                $ \theta_{sat}[1]$ &
+                $ \theta_{sat}[0]$ \\ \hline \hline
                 % ============================================
                 Degreened & RMC & high & -0.06 & 1.43 & 31.19 \\
                 % =============================================
