--- a/secs/4-NOx_mdl/1-subs/ident_form.tex
+++ b/secs/4-NOx_mdl/1-subs/ident_form.tex
@@ -2,11 +2,11 @@
 The parametric model presented previously can be converted to a regression form with minimal noise amplification as follows:
 let,
 \begin{align}
-        \phi_{\eta r}(k) &= \bm{\lrb{1 - \frac{x_1(k)}{u_1(k-1)}} u_2(k-1) \phi^T(k-1) \\
-                                     \lrb{1 - \frac{x_1(k)}{u_1(k-1)}}   F(k-1) \phi^T(k-1)     \\
-                                        \eta(k) F(k-1) \phi^T(k)
+        \phi_{\eta r}(k) &= \bm{\lrb{1 - \frac{x_1(k)}{u_1(k-1)}} u_2(k-1) \phi_1^T(k-1) \\
+                                     \lrb{1 - \frac{x_1(k)}{u_1(k-1)}}   F(k-1) \phi_1^T(k-1)     \\
+                                        \eta(k) F(k-1) \phi_1^T(k)
                                                 }\\
-        \phi_{\Gamma r}(k) &= \lrb{ \frac{u_2(k-1)}{F(k-1)}} \phi(k-1)
+        \phi_{\Gamma r}(k) &= \lrb{ \frac{u_2(k-1)}{F(k-1)}} \phi_2(k-1)
 \end{align}
 Thus, rewriting equation (\ref{eqn::eta_parm}):
 \begin{align*}
