--- a/secs/4-NOx_mdl/1-subs/physical_interp.tex
+++ b/secs/4-NOx_mdl/1-subs/physical_interp.tex
@@ -12,10 +12,10 @@ is implicitly considered.
                                         \text{from previous step}\\
                                         \text{corrected for current flow-rate}}}
                                 \\+ \underbrace{ \lrb{\frac{u_1(k)}{F(k)}}
-                                \bm{\lrb{1 - \frac{x_1(k)}{u_1(k-1)}} u_2(k-1) \phi^T(k-1) \\
-                                     \lrb{1 - \frac{x_1(k)}{u_1(k-1)}}   F(k-1) \phi^T(k-1)     \\
-                                         \eta(k) F(k-1) \phi^T(k) \\
-                                         - \lrb{ \frac{u_2(k-1)}{F(k-1)}} \phi(k-1)}
+                                \bm{\lrb{1 - \frac{x_1(k)}{u_1(k-1)}} u_2(k-1) \phi_1^T(k-1) \\
+                                     \lrb{1 - \frac{x_1(k)}{u_1(k-1)}}   F(k-1) \phi_1^T(k-1)     \\
+                                         \eta(k) F(k-1) \phi_1^T(k) \\
+                                         - \lrb{ \frac{u_2(k-1)}{F(k-1)}} \phi_2(k-1)}
                                 \bm{\nu_u t_s \theta_{ads}\\
                                         t_s \theta_{od} \\
                                         t_s  \theta_{scr} \\
